<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_ejercicio_to_lista_ejercicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fitgym.ui.addEjerciciosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:text="@string/nombre_ejercicio"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/nombre_nuevo_ejercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/msg_image"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_image"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/add_image"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion_nuevo_ejercicio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </LinearLayout>

            <EditText
                android:id="@+id/descripcion_nuevo_ejercicio"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text|textMultiLine|textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btGuardar" />

            <Button
                android:id="@+id/btCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btCancelar" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>