<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/bitgymlogo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ejercicios"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/color1"
            android:text="@string/Ejercicio"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_rutina"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/color1"
            android:text="@string/Rutina"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/background_light"
            android:textIsSelectable="false"
            android:textSize="30sp"
            android:textStyle="italic"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>